@@ -1,3 +1,9 @@
+<h5>2.26 RC-1 [2017-08-09]</h5>
+<hr>
++ fixed ContactConfigurator (aerograf/mamba)
++ updated pre_update functions (mamba)
+
+
 <h5>2.25 Final [2017-08-04]</h5>
 <hr>
 + added missing $moduleDirName in header.php (mamba)
